--- a/site/Gemfile
+++ b/site/Gemfile
@@ -8,8 +8,11 @@ group :jekyll_plugins do
   gem "octopress-ink"#, path: "../../ink"
   gem "octopress-solarized"#, path: "../../solarized"
   gem "octopress-asset-pipeline"#, path: "../../asset-pipeline"
+  gem "octopress-codefence"#, path: "../../codefence"
+  gem "octopress-codeblock", path: "../../codeblock"
   gem "octopress-abort-tag"#, path: "../../abort-tag"
   gem "octopress-include-tag"#, path: "../../include-tag"
-  gem "octopress-codefence"#, path: "../../codefence"
+  gem "octopress-render-tag"#, path: "../../render-tag"
+  gem "octopress-return-tag"#, path: "../../return-tag"
 end
 
