Added more plugins to docs site

--- a/site/Gemfile
+++ b/site/Gemfile
@@ -6,13 +6,17 @@ gem "pry-byebug"
 group :jekyll_plugins do
   gem "octopress", path: "../"
   gem "octopress-ink"#, path: "../../ink"
+  gem "octopress-deploy"#, path: "../../deploy"
   gem "octopress-solarized"#, path: "../../solarized"
   gem "octopress-asset-pipeline"#, path: "../../asset-pipeline"
   gem "octopress-codefence"#, path: "../../codefence"
-  gem "octopress-codeblock", path: "../../codeblock"
+  gem "octopress-codeblock"#, path: "../../codeblock"
+  gem "octopress-render-code"#, path: "../../render-code"
+  gem "octopress-gist"#, path: "../../gist"
   gem "octopress-abort-tag"#, path: "../../abort-tag"
   gem "octopress-include-tag"#, path: "../../include-tag"
   gem "octopress-render-tag"#, path: "../../render-tag"
   gem "octopress-return-tag"#, path: "../../return-tag"
+  gem "clash", path: "../../clash"
 end
 
