--- a/site/_config.yml
+++ b/site/_config.yml
@@ -3,3 +3,4 @@ exclude:
   - Gemfile
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
+minify_html: false
