Added more Octopress plugins

--- a/site/Gemfile
+++ b/site/Gemfile
@@ -5,23 +5,33 @@ gem "pry-byebug"
 
 group :jekyll_plugins do
   gem "octopress", path: "../"
-  gem "octopress-ink"#, path: "../../ink"
   gem "octopress-deploy"#, path: "../../deploy"
-  gem "octopress-solarized"#, path: "../../solarized"
+  gem "octopress-linkblog"#, path: "../../linkblog"
+  gem "octopress-feeds"#, path: "../../feeds"
   gem "octopress-asset-pipeline"#, path: "../../asset-pipeline"
-  gem "octopress-codefence"#, path: "../../codefence"
-  gem "octopress-codeblock"#, path: "../../codeblock"
-  gem "octopress-render-code"#, path: "../../render-code"
-  gem "octopress-gist"#, path: "../../gist"
-  gem "octopress-abort-tag"#, path: "../../abort-tag"
-  gem "octopress-include-tag"#, path: "../../include-tag"
-  gem "octopress-render-tag"#, path: "../../render-tag"
-  gem "octopress-return-tag"#, path: "../../return-tag"
   gem "octopress-minify-html"#, path: "../../minify-html"
+  gem "octopress-date-format"#, path: "../../date-format"
+  #gem "octopress-genesis-theme"#, path: "../../genesis-theme" *
+  gem "octopress-ink"#, path: "../../ink"
+  gem "octopress-codefence"#, path: "../../codefence"
+  gem "octopress-gist"#, path: "../../gist"
+  gem "octopress-render-code"#, path: "../../render-code"
+  gem "octopress-codeblock"#, path: "../../codeblock"
+  gem "octopress-solarized"#, path: "../../solarized"
+  gem "clash", path: "../../clash"
   gem "octopress-quote-tag"#, path: "../../quote-tag"
   gem "octopress-pullquote-tag"#, path: "../../pullquote-tag"
   gem "octopress-image-tag"#, path: "../../image-tag"
   gem "octopress-video-tag"#, path: "../../video-tag"
-  gem "clash", path: "../../clash"
+  gem "octopress-include-tag"#, path: "../../include-tag"
+  gem "octopress-render-tag"#, path: "../../render-tag"
+  gem "octopress-wrap-tag"#, path: "../../wrap-tag"
+  gem "octopress-assign-tag"#, path: "../../assign-tag" *
+  gem "octopress-capture-tag"#, path: "../../capture-tag" *
+  gem "octopress-return-tag"#, path: "../../return-tag"
+  gem "octopress-comment-tag"#, path: "../../comment-tag" *
+  gem "octopress-content-for"#, path: "../../content-for"
+  gem "octopress-markdown-tag"# path: "../../markdown-tag"
+  gem "octopress-abort-tag"#, path: "../../abort-tag"
 end
 
