--- a/.clash.yml
+++ b/.clash.yml
@@ -8,6 +8,8 @@
       - echo "<div class=page>{{ page.title }}{{ content }}</div>" > _layouts/page.html
     new_draft:
       - octopress new draft "Some Cool Idea" --date "2014-03-10 15:20 -0000"
+    new_draft_lang:
+      - octopress new draft "Some Cool Idea" --date "2014-03-10 15:20 -0000" --lang es
     new_post:
       - octopress new post "Some Cool Idea" --date "2014-03-10 15:20 -0000"
     new_posts:
@@ -58,6 +60,13 @@
   compare: 
     - _expected/new-draft/_drafts _drafts
 -
+  title: Add a draft with language option
+  before:
+    - reset_site
+    - new_draft_lang
+  compare: 
+    - _expected/new-draft-lang/_drafts _drafts
+-
   title: Add a draft with a slug
   before:
     - reset_site
@@ -83,7 +92,14 @@
   compare: 
     - _expected/publish-draft-date/_posts _posts
   enforce_missing: drafts/*
-
+-
+  title: Publish a draft with language option
+  before:
+    - reset_site
+    - new_draft_lang
+    - octopress publish cool
+  compare: 
+    - _expected/publish-draft-lang/_posts _posts
 -
   title: Publish a draft in a dir
   before:
